# battleship-game

./: CMakeLists.txt  README.md  README.txt
entrypoints/: battaglia_navale.cpp  charizard.cpp  replay.cpp
include/: command.h  constant.h  match.h  player.h  position.h
include/grid/: attack_grid.h  defense_grid.h  grid.h  grid_container.h
include/ship/: battleship.h  ship.h  submarine.h  support_ship.h
logs/: computer-vs-computer.txt  player-vs-computer.txt
src/: command.cpp  match.cpp  player.cpp  position.cpp
src/grid/: attack_grid.cpp  defense_grid.cpp  grid.cpp  grid_container.cpp
src/ship/: battleship.cpp  ship.cpp  submarine.cpp  support_ship.cpp
